# bluerov_deployment

.github/workflows/: ci.yml  docker.yml
compose/blue_on_laptop_nvidia/: apl_env.sh  docker-compose.yaml
compose/blue_on_rov/: .env  apl_env.sh  docker-compose.yaml
compose/blue_sim/: .env  apl_env.sh  docker-compose.yaml
compose/blue_sim_nvidia/: docker-compose.yaml
compose/cockpit/: docker-compose.yaml
compose/mediamtx/: docker-compose.yaml  mediamtx.yml
docking_demo/: CMakeLists.txt  README.md  package.xml
docking_demo/control_integration/config/: bluerov2_docking_controllers.yaml
docking_demo/control_integration/launch/: bluerov2_controllers.launch.py
